Calling it for tonight

--- a/game/tsconfig.json
+++ b/game/tsconfig.json
@@ -7,6 +7,9 @@
       "typeRoots": [
           "node_modules/phaser/types"
       ],
+      "lib": [
+        "ES2019"
+      ],
       "allowJs": true,
       "moduleResolution": "node",
       "sourceMap": true
